# pdf_chat

./: .dockerignore  .gcloudignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/custom/helm/: action.yaml
.github/custom/security/: action.yaml
.github/custom/test/: action.yaml
.github/custom/variables/: action.yaml
.github/workflows/: check-deploy.yaml  code-quality.yaml  deploy.yaml
app/: main.py
app/core/: config.py
app/core/llm/: azure_open.ai.py
app/core/pdf_chat/graph/nodes/: chat.py  pdf.py  postprocessing.py  sql.py  supervisor.py
app/core/pdf_chat/graph/tools/: certificado.html  pdf_generator_tool.py  postgresql_tool.py
app/core/pdf_chat/prompts/: chat_prompt.py  pdf_prompt.py  post_proccess_prompt.py  sql_generation_prompt.py  sql_verify_query_prompt.py  supervisor_prompt.py
app/core/pdf_chat/schemas/: graph_const.py  graph_states.py  supervisor_schema.py
app/core/pdf_chat/services/: chat_pipeline.py  pdf_pipeline.py  post_process_pipeline.py  slq_verify_query_pipeline.py  sql_generation_pipeline.py  supervisor_pipeline.py
app/core/singleton/: pdf_chat_graph.py  postgres.py
app/repository/: user_repository.py
app/routes/v1/: health.py  pdf_chat.py  users.py
app/schemas/: users.py
app/services/: pdf_chat_service.py  users.py
ci/environment/: values-dev.yaml
ci/helm/: Chart.yaml
ci/helm/templates/: deployment.yaml  service.yaml
